--- a/style.css
+++ b/style.css
@@ -134,3 +134,26 @@ h1, h2, h3, h4, h5, h6 {
     text-overflow: ellipsis;
 }
 
+
+
+
+
+
+
+
+.html5-vpl_vid .html5-vpl_vid_display {
+    width: 100%;
+    height: 100%;
+    display: block;
+    transform-origin: center;
+    transition: transform .2s ease-in-out;
+  }
+  .html5-vpl {
+    font: normal 12px/12px Arial,Helvetica,sans-serif;
+    color: #fff;
+    visibility: visible !important;
+  }
+  .vid-card_cnt {
+    cursor: pointer;
+  }
+ 
