--- a/DCvideos/style.css
+++ b/DCvideos/style.css
@@ -45,6 +45,11 @@ body {
     text-decoration: none;
     border-radius: 5px;
 }
+.c {
+    color: #af2b2b; 
+    text-decoration: none;
+    border-radius: 5px;
+}
 
 h1, h2, h3, h4, h5, h6 {
     max-width: 90%;
@@ -56,6 +61,9 @@ h1, h2, h3, h4, h5, h6 {
     .centered-box {
         width: 90%;
     }
+    iframe {
+        height: 400px;  /* Riduci l'altezza su schermi più piccoli */
+    }
 }
 
 /* Stile per schermi ancora più piccoli, come dispositivi mobili */
@@ -63,4 +71,23 @@ h1, h2, h3, h4, h5, h6 {
     .centered-box {
         width: 95%;
     }
+    iframe {
+        height: 300px;  /* Riduci ulteriormente l'altezza per dispositivi mobili */
+    }
+}
+
+iframe {
+    width: 100%;  /* L'iframe occupa il 100% della larghezza del suo contenitore */
+    height: 600px;  /* Altezza fissa per evitare che diventi troppo alto su schermi più piccoli */
+    max-width: 1200px;  /* Altezza massima dell'iframe */
+    margin: 20px 0;  /* Margine superiore e inferiore per uno spazio adeguato */
+}
+
+.flipped-video {
+    transform: scaleX(-1);
+}
+
+.flipped-container {
+    transform: scaleX(-1);
+    display: inline-block;
 }
