--- a/style.css
+++ b/style.css
@@ -142,11 +142,23 @@ h1, h2, h3, h4, h5, h6 {
     .centered-box {
         width: 90%;
     }
+    .qa-table{
+        width: 90%;
+    }
+    .pfp{
+        width: 90%;
+    }
 }
 
 /* Stile per schermi ancora più piccoli, come dispositivi mobili */
 @media (max-width: 480px) {
     .centered-box {
         width: 95%;
+    }
+    .qa-table{
+        width: 95%;
+    }
+    .pfp{
+        width: 85%;
     }
 }
