--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .centered-box {
-    width: 50%; 
+    width: 50%;
     padding: 30px;
     background-color: rgba(172, 38, 190, 0.192);
     color: #cccccc;
@@ -46,7 +46,7 @@ body {
     align-items: center;
     text-align: center;
     margin-top: 14px;
-    padding-top: 20px; 
+    padding-top: 20px;
 }
 
 .discord-widget {
@@ -80,17 +80,17 @@ body {
 
 .social-icons a {
     flex: 0 0 auto;
-    margin: 0 5px; 
+    margin: 0 5px;
 }
 
 .scroll-to-social {
-    color: #2b59af; 
+    color: #2b59af;
     text-decoration: none;
     border-radius: 5px;
 }
 
 .b {
-    color: #2b59af; 
+    color: #2b59af;
     text-decoration: none;
     border-radius: 10px;
     font: normal 20px Cursive;
@@ -119,7 +119,7 @@ body {
 }
 
 .qa-table .answer .grigio {
-    color: #cccccc; 
+    color: #cccccc;
 }
 
 .qa-table .answer .verde {
@@ -130,6 +130,16 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 90%;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+#welcome-text {
+    color: #ffffff;
+    font-size: 18px;
+    margin: 20px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid #ffffff;
+    padding-right: 5px;
 }
 
 @media (max-width: 768px) {
@@ -147,13 +157,3 @@ h1, h2, h3, h4, h5, h6 {
         width: 85%;
     }
 }
-
-
-
-
-
-
-
-
-
-
