--- a/style.css
+++ b/style.css
@@ -1,181 +1,175 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Times New Roman', Times, serif;
+    margin: 0;
+    padding: 0;
 }
 
-html,
-body {
-	color: rgb(0, 0, 0);
+html, body {
+    color: rgb(0, 0, 0);
 }
 
 body {
-	margin-top: 18px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	font: 14px;
-	background-color: #000;
-	color: #cccccc;
+    margin-top: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font: normal 14px Arial;
+    background-color: #000;
+    color: #cccccc;
 }
 
 .a {
-	position: relative;
-	text-align: center;
-	text-decoration: none;
-	color: #cccccc;
-	letter-spacing: 1px;
-	padding: 0px 10px;
-	display: inline-block;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    color: #cccccc;
+    letter-spacing: 1px;
+    padding: 0px 10px;
+    display: inline-block;
 }
 
 .a:hover {
-	color: #cccccc;
+    color: #cccccc;
 }
 
 .centered-box {
-	width: 50%;
-	padding: 30px;
-	background-color: rgba(172, 38, 190, 0.192);
-	color: #cccccc;
-	text-align: center;
-	margin-bottom: 20px;
+    width: 50%;
+    padding: 30px;
+    background-color: rgba(172, 38, 190, 0.192);
+    color: #cccccc;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .main-list {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	margin-top: 14px;
-	padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 14px;
+    padding-top: 20px;
 }
 
 .discord-widget {
-	display: block;
-	margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
-.logo,
-.dc,
-.pfp,
-.dog {
-	max-width: 100%;
-	height: auto;
+.logo, .dc, .pfp .rufusimg {
+    max-width: 100%;
+    height: auto;
 }
-.mc {
-	max-width: 100%;
-	max-width: 500px;
+
+.rufusimg{
+    width: 333px;
 }
 
 .logo {
-	width: 72px;
+    width: 72px;
 }
 
 .dc {
-	width: 450px;
+    width: 450px;
 }
 
 .pfp {
-	width: 400px;
+    width: 333px;
 }
 
+.mc {
+    width: 333px;
+}
+
+
 .social-icons {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	margin-bottom: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 0px;
 }
 
 .social-icons a {
-	flex: 0 0 auto;
-	margin: 0 5px;
+    flex: 0 0 auto;
+    margin: 0 5px;
 }
 
 .scroll-to-social {
-	color: #2b59af;
-	text-decoration: none;
-	border-radius: 5px;
+    color: #2b59af;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
 .b {
-	color: #2b59af;
-	text-decoration: none;
-	border-radius: 10px;
-	font: normal 20px Cursive;
+    color: #2b59af;
+    text-decoration: none;
+    border-radius: 10px;
+    font: normal 20px Cursive;
 }
 
 .qa-table {
-	width: 72%;
-	border-collapse: collapse;
-	margin-top: 20px;
+    width: 72%;
+    border-collapse: collapse;
+    margin-top: 20px;
 }
 
 .qa-table td {
-	border: 2px solid #cccccc;
-	padding: 15px;
-	text-align: left;
+    border: 2px solid #cccccc;
+    padding: 15px;
+    text-align: left;
 }
 
 .qa-table .question {
-	width: 27%;
-	background-color: #af2b2b65;
-	color: #ffffff;
+    width: 27%;
+    background-color: #af2b2b65;
+    color: #ffffff;
 }
 
 .qa-table .answer {
-	width: auto;
+    width: auto;
 }
 
 .qa-table .answer .grigio {
-	color: #cccccc;
+    color: #cccccc;
 }
 
 .qa-table .answer .verde {
-	color: #7bb602;
+    color: #7BB602;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	max-width: 90%;
-	overflow: hidden;
-	text-overflow: ellipsis;
+h1, h2, h3, h4, h5, h6 {
+    max-width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #welcome-text {
-	color: #ffffff;
-	font-size: 18px;
-	margin: 20px 0;
-	white-space: nowrap;
-	overflow: hidden;
-	border-right: 2px solid #ffffff;
-	padding-right: 5px;
+    color: #ffffff;
+    font-size: 18px;
+    margin: 20px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid #ffffff;
+    padding-right: 5px;
 }
 
 @media (max-width: 768px) {
-	.centered-box,
-	.qa-table,
-	.pfp,
-	.mc {
-		width: 90%;
-	}
+    .centered-box, .qa-table, .pfp {
+        width: 90%;
+    }
 }
 
 @media (max-width: 480px) {
-	.centered-box,
-	.qa-table {
-		width: 95%;
-	}
+    .centered-box, .qa-table  {
+        width: 95%;
+    }
 
-	.pfp
-	.mc {
-		width: 85%;
-	}
+    .pfp, .rufusimg {
+        width: 85%;
+    }
+
 }
+
+
+
 
 .hidden {
 	opacity: 0;
