--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ body {
     border-radius: 10px;
     font: normal 20px Cursive;
 }
+.b2 {
+    color: #2b59af;
+    text-decoration: none;
+    border-radius: 10px;
+}
 
 .qa-table {
     width: 72%;
@@ -150,6 +155,50 @@ h1, h2, h3, h4, h5, h6 {
     border-right: 2px solid #ffffff;
     padding-right: 5px;
 }
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.image-wrapper {
+    position: relative;
+    margin-bottom: 15px;
+    margin-right: 10px;
+}
+
+.description {
+    display: none;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.image-wrapper:hover .description {
+    display: block;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .image-wrapper:hover .description {
+        display: block;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 768px) {
     .centered-box, .qa-table, .pfp {
