--- a/style.css
+++ b/style.css
@@ -3,41 +3,40 @@
     padding: 0;
 }
 
-html, body {
-    color: rgb(0, 0, 0);
-}
-
 body {
     margin-top: 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font: normal 14px Arial;
-    background-color: #000;
-    color: #cccccc;
+    background-color: #2f3e46; 
+    color: #e0fbfc; 
 }
 
 .a {
     position: relative;
     text-align: center;
     text-decoration: none;
-    color: #cccccc;
+    color: #8ecae6; 
     letter-spacing: 1px;
     padding: 0px 10px;
     display: inline-block;
-}
+}   
 
-.a:hover {
-    color: #cccccc;
+a:hover {
+    color: #e0fbfc; 
 }
 
 .centered-box {
     width: 50%;
     padding: 30px;
     background-color: rgba(172, 38, 190, 0.192);
-    color: #cccccc;
+    color: #e0fbfc;
     text-align: center;
-    margin-bottom: 20px;
+    border-radius: 18px;  
+    margin-bottom: 9px;
+    border: 2px solid #cccccc; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.308); 
 }
 
 .main-list {
@@ -79,7 +78,6 @@ body {
     width: 333px;
 }
 
-
 .social-icons {
     display: flex;
     flex-wrap: wrap;
@@ -93,21 +91,26 @@ body {
 }
 
 .scroll-to-social {
-    color: #2b59af;
+    color: #ff5e00;
     text-decoration: none;
     border-radius: 5px;
 }
 
 .b {
-    color: #2b59af;
+    color: #ff5e00;
     text-decoration: none;
     border-radius: 10px;
     font: normal 20px Cursive;
 }
+.b:hover {
+    color: #e0fbfc;
+}
+
 .b2 {
     color: #2b59af;
     text-decoration: none;
     border-radius: 10px;
+    font: normal 20px Cursive;
 }
 
 .qa-table {
@@ -178,7 +181,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     margin-bottom: 15px;
     margin-right: 10px;
-    margin-left: 10px; /* Aggiungi margine a sinistra */
+    margin-left: 10px; 
 }
 
 .image-wrapper:hover .description {
@@ -203,24 +206,19 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .image-wrapper {
-        width: 100%; /* Assicurati che il wrapper occupi tutta la larghezza */
+        width: 100%; 
         display: flex;
         justify-content: center;
-        margin-right: 0; /* Rimuovi il margine a destra */
-        margin-left: 0;  /* Rimuovi il margine a sinistra */
+        margin-right: 0; 
+        margin-left: 0;  
     }
 
     .pfp, .rufusimg {
         width: 85%;
         height: auto;
-        margin: 0 auto; /* Centra l'immagine */
+        margin: 0 auto; 
     }
 }
-
-
-
-
-
 
 @media (max-width: 768px) {
     .centered-box, .qa-table, .pfp {
@@ -237,7 +235,6 @@ h1, h2, h3, h4, h5, h6 {
         width: 85%;
     }
 }
-
 
 .hidden {
     opacity: 0;
@@ -259,30 +256,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .countdown-container {
-    text-align: center;
-    background: #00000065;
+
+    background: #2f3e46;
     color: #cccccc;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     max-width: 90%;
 }
 
 #countdown {
     display: flex;
-    justify-content: center;
     gap: 10px;
 }
 
 #countdown div {
-    background: #000000;
     color: #ffffff;
-    padding: 10px;
     border-radius: 5px;
-    width: 80px;
+    width: 66px;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #countdown span {
@@ -291,7 +284,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 5px;
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
     .countdown-container {
         max-width: 90%;
@@ -300,7 +292,7 @@ h1, h2, h3, h4, h5, h6 {
 
     #countdown {
         flex-wrap: wrap;
-        gap: 5px;
+
     }
 
     #countdown div {
