--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ footer a:hover {
 
 
 #minecraft-texture-page {
-    background-image: url('Image.Videos/mc/SfondoMC.png');
+    background-image: url('Image.Videos/mc/sfondoMC.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
