--- a/style.css
+++ b/style.css
@@ -1,178 +1,194 @@
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-	margin-top: 18px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	font: normal 18px Arial;
-	background-color: #1e262b;
-	color: #cccccc;
+    margin: 18px auto 0;
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font: normal 18px Arial;
+    background-color: #1e262b;
+    color: #cccccc;
 }
 
 a {
-	text-align: center;
+    text-align: center;
 }
 
 .a {
-	position: relative;
-	text-align: center;
-	text-decoration: none;
-	color: #8ecae6;
-	letter-spacing: 1px;
-	padding: 0px 10px;
-	display: inline-block;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    color: #8ecae6;
+    letter-spacing: 1px;
+    padding: 0px 10px;
+    display: inline-block;
 }
 
 a:hover {
-	color: #ff5e00;
+    color: #ff5e00;
 }
 
 .centered-box {
-	padding: 50px;
-	background-color: rgba(172, 38, 190, 0.192);
-	color: #e0fbfc;
-	text-align: center;
-	border-radius: 18px;
-	margin-bottom: 9px;
-	border: 2px solid #cccccc;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.308);
+    padding: 50px;
+    background-color: rgba(172, 38, 190, 0.192);
+    color: #e0fbfc;
+    text-align: center;
+    border-radius: 18px;
+    margin: 35px auto 9px;
+    border: 2px solid #cccccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.308);
+    width: 80%;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-list {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	margin-top: 14px;
-	padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 14px;
+    padding-top: 20px;
 }
 
 .discord-widget {
-	display: block;
-	margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .logo,
 .dc,
 .rufusimg {
-	max-width: 100%;
-	height: auto;
-	border-radius: 9px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 9px;
 }
 
 .pfp {
-	width: 100%;
-	height: auto;
-	border-radius: 9px;
-	transition: transform 0.3s;
+    width: 100%;
+    height: auto;
+    border-radius: 9px;
+    transition: transform 0.3s;
 }
 
 .pfp:hover {
-	transform: scale(1.03);
+    transform: scale(1.03);
 }
 
 .rufusimg {
-	width: 333px;
+    width: 333px;
 }
 
 .logo {
-	width: 72px;
+    width: 72px;
 }
 
 .dc {
-	width: 450px;
+    width: 450px;
 }
 
 .pfp {
-	width: 333px;
+    width: 333px;
 }
 
 .mc {
-	width: 500px;
-	transition: transform 0.3s;
+    width: 500px;
+    transition: transform 0.3s;
 }
 
 .mcb {
-	width: 400px;
+    width: 400px;
 }
 
 .mc:hover {
-	transform: scale(1.03);
+    transform: scale(1.03);
 }
 
 .social-icons {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	margin-bottom: 0px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 0px;
 }
 
-.social-icons a {
-	flex: 0 0 auto;
-	margin: 0 5px;
+.social-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px;
+    max-width: 90%;
+}
+
+.social-list a {
+    flex: 0 0 auto;
 }
 
 .scroll-to-social {
-	color: #ff5e00;
-	text-decoration: none;
-	border-radius: 5px;
+    color: #ff5e00;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
 .scroll-to-social:hover {
-	color: #e0fbfc;
+    color: #e0fbfc;
 }
 
 .b {
-	color: #ff5e00;
-	text-decoration: none;
-	border-radius: 10px;
-	font: normal 20px Cursive;
+    color: #ff5e00;
+    text-decoration: none;
+    border-radius: 10px;
+    font: normal 20px Cursive;
 }
+
 .b:hover {
-	color: #e0fbfc;
+    color: #e0fbfc;
 }
 
 .b2 {
-	color: #2b59af;
-	text-decoration: none;
-	border-radius: 10px;
-	font: normal 20px Cursive;
+    color: #2b59af;
+    text-decoration: none;
+    border-radius: 10px;
+    font: normal 20px Cursive;
 }
 
 .qa-table {
-	width: 72%;
-	border-collapse: collapse;
-	margin-top: 20px;
+    width: 72%;
+    border-collapse: collapse;
+    margin: 20px auto 0;
 }
 
 .qa-table td {
-	border: 2px solid #cccccc;
-	padding: 15px;
-	text-align: left;
+    border: 2px solid #cccccc;
+    padding: 15px;
+    text-align: left;
 }
 
 .qa-table .question {
-	width: 27%;
-	background-color: #af2b2b65;
-	color: #ffffff;
+    width: 27%;
+    background-color: #af2b2b65;
+    color: #ffffff;
 }
 
 .qa-table .answer {
-	width: auto;
+    width: auto;
 }
 
 .qa-table .answer .grigio {
-	color: #cccccc;
+    color: #cccccc;
 }
 
 .qa-table .answer .verde {
-	color: #7bb602;
+    color: #7bb602;
 }
-
 
 h1,
 h2,
@@ -180,237 +196,272 @@ h3,
 h4,
 h5,
 h6 {
-	max-width: 90%;
-	overflow: hidden;
-	text-overflow: ellipsis;
+    max-width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
 #welcome-text {
-	color: #ffffff;
-	font-size: 18px;
-	margin: 20px 0;
-	white-space: nowrap;
-	overflow: hidden;
-	border-right: 2px solid #ffffff;
-	padding-right: 5px;
+    color: #ffffff;
+    font-size: 18px;
+    margin: 20px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid #ffffff;
+    padding-right: 5px;
+    text-align: center;
 }
 
 .description {
-	display: none;
-	position: absolute;
-	bottom: 10px;
-	left: 10px;
-	background-color: rgba(0, 0, 0, 0.7);
-	color: #fff;
-	padding: 5px;
-	border-radius: 3px;
+    display: none;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 .image-container {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .image-wrapper {
-	position: relative;
-	margin-bottom: 15px;
-	margin-right: 10px;
-	margin-left: 10px;
+    position: relative;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .image-wrapper:hover .description {
-	display: block;
+    display: block;
 }
 
 @media (hover: hover) and (pointer: fine) {
-	.image-wrapper:hover .description {
-		display: block;
-	}
+    .image-wrapper:hover .description {
+        display: block;
+    }
 }
 
 @media (max-width: 768px) {
-	.qa-table,
-	.pfp {
-		width: 90%;
-	}
+    .qa-table,
+    .pfp {
+        width: 90%;
+    }
 }
 
 @media (max-width: 480px) {
-	.qa-table {
-		width: 95%;
-	}
+    .qa-table {
+        width: 95%;
+    }
 
-	.image-wrapper {
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		margin-right: 0;
-		margin-left: 0;
-	}
+    .image-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-right: 0;
+        margin-left: 0;
+    }
 
-	.pfp,
-	.rufusimg {
-		width: 85%;
-		height: auto;
-		margin: 0 auto;
-	}
+    .pfp,
+    .rufusimg {
+        width: 85%;
+        height: auto;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 768px) {
-	.qa-table,
-	.pfp {
-		width: 90%;
-	}
+    .qa-table,
+    .pfp {
+        width: 90%;
+    }
 }
 
 @media (max-width: 480px) {
-	.qa-table {
-		width: 95%;
-	}
+    .qa-table {
+        width: 95%;
+    }
 
-	.pfp,
-	.rufusimg {
-		width: 85%;
-	}
+    .pfp,
+    .rufusimg {
+        width: 85%;
+    }
 }
 
 .hidden {
-	opacity: 0;
-	filter: blur(5px);
-	transform: translateY(-100%);
-	transition: all 1s;
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(-100%);
+    transition: all 1s;
 }
 
 .show {
-	opacity: 1;
-	filter: blur(0);
-	transform: translateX(0);
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
 
 @media (prefers-reduced-motion) {
-	.hidden {
-		transition: none;
-	}
+    .hidden {
+        transition: none;
+    }
 }
 
 .countdown-container {
-	background-color: #1e262b;
-	color: #cccccc;
-	padding: 20px;
-	border-radius: 10px;
-	margin-bottom: 20px;
-	max-width: 90%;
+    background-color: #1e262b;
+    color: #cccccc;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px auto;
+    max-width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #countdown {
-	display: flex;
-	gap: 10px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
 }
 
 #countdown div {
-	color: #ffffff;
-	border-radius: 5px;
-	width: 66px;
-	text-align: center;
-	font-size: 18px;
+    color: #ffffff;
+    border-radius: 5px;
+    width: 66px;
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #countdown span {
-	display: block;
-	font-size: 36px;
-	margin-bottom: 5px;
+    display: block;
+    font-size: 36px;
+    margin-bottom: 5px;
 }
 
 @media (max-width: 768px) {
-	.countdown-container {
-		max-width: 90%;
-		padding: 15px;
-	}
+    .countdown-container {
+        max-width: 90%;
+        padding: 15px;
+    }
 
-	#countdown {
-		flex-wrap: wrap;
-	}
+    #countdown {
+        flex-wrap: wrap;
+    }
 
-	#countdown div {
-		width: 70px;
-		padding: 8px;
-		font-size: 18px;
-	}
+    #countdown div {
+        width: 70px;
+        padding: 8px;
+        font-size: 18px;
+    }
 
-	#countdown span {
-		font-size: 30px;
-	}
+    #countdown span {
+        font-size: 30px;
+    }
 }
 
 @media (max-width: 480px) {
-	.countdown-container {
-		max-width: 95%;
-		padding: 10px;
-	}
+    .countdown-container {
+        max-width: 95%;
+        padding: 10px;
+    }
 
-	#countdown {
-		flex-direction: column;
-		gap: 5px;
-	}
+    #countdown {
+        flex-direction: column;
+        gap: 5px;
+    }
 
-	#countdown div {
-		width: 100%;
-		padding: 6px;
-		font-size: 16px;
-	}
+    #countdown div {
+        width: 100%;
+        padding: 6px;
+        font-size: 16px;
+    }
 
-	#countdown span {
-		font-size: 24px;
-	}
+    #countdown span {
+        font-size: 24px;
+    }
 }
 
 nav a {
-	color: #ffffff;
-	text-decoration: none;
-	margin: 0 15px;
-	font-size: 18px;
-	font-weight: bold;
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
 }
 
 nav a:hover {
-	color: #ff5e00;
+    color: #ff5e00;
 }
 
 main {
-	width: 90%;
-	max-width: 1200px;
-	padding: 20px;
-	overflow: hidden; /* Aggiunto per evitare problemi di overflow */
+    width: 100%;
+    max-width: 1200px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .intro,
 .projects {
-	margin: 20px 0;
-	text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.centra {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: column;
+    text-align: center;
 }
 
 .project-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .project {
-	width: 30%;
-	margin-bottom: 20px;
-	text-align: center;
+    width: 30%;
+    min-width: 300px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .project img {
-	width: 100%;
-	height: auto;
-	border-radius: 10px;
-	transition: transform 0.3s;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s;
 }
 
 .project img:hover {
-	transform: scale(1.03);
+    transform: scale(1.03);
 }
 
 footer {
@@ -418,92 +469,108 @@ footer {
 	color: #ffffff;
 	padding: 20px 0;
 	text-align: center;
-	width: 100%;
 	position: relative;
+	width: 100vw;
+	margin-left: calc(50% - 50vw);
+	margin-right: calc(50% - 50vw);
+	box-sizing: border-box;
 }
 
 footer a {
-	color: #ff5e00;
-	text-decoration: none;
+    color: #ff5e00;
+    text-decoration: none;
 }
 
 footer a:hover {
-	text-decoration: underline;
-}
-
-.social-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	gap: 20px;
-	margin-top: 20px;
+    text-decoration: underline;
 }
 
 .social-list a img {
-	width: 50px;
-	height: 50px;
-	transition: transform 0.3s;
+    width: 50px;
+    height: 50px;
+    transition: transform 0.3s;
 }
 
 .social-list a img:hover {
-	transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 @media (max-width: 768px) {
-	.project {
-		width: 45%;
-	}
+    .centered-box {
+        width: 90%;
+        padding: 30px;
+    }
+    
+    .project {
+        width: 45%;
+        min-width: 250px;
+    }
 }
 
 @media (max-width: 480px) {
-	.project {
-		width: 100%;
-	}
+    .centered-box {
+        width: 95%;
+        padding: 20px;
+        margin-top: 20px;
+    }
+    
+    .project {
+        width: 100%;
+        min-width: auto;
+    }
+    
+    .social-list {
+        gap: 10px;
+    }
+    
+    .social-list a img {
+        width: 40px;
+        height: 40px;
+    }
 }
 
 #minecraft-texture-page {
-	background-image: url("Image.Videos/mc/sfondoMC.png");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	position: relative;
-	z-index: 1;
+    background-image: url("Image.Videos/mc/sfondoMC.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
     #minecraft-texture-page {
-        background-attachment: scroll; 
+        background-attachment: scroll;
     }
 }
 
-
 .text-overlay {
-	position: relative;
-	z-index: 2;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .text-overlay::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: #1e262bd2;
-	z-index: -1;
-	pointer-events: none;
-	border-radius: 10px;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1e262bd2;
+    z-index: -1;
+    pointer-events: none;
+    border-radius: 10px;
 }
-
-
 
 .c {
     color: #ff0000;
+    text-align: center;
 }
-
-
